--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
     /* watermark */
     .page::before{
       content:""; position:absolute; inset:0; pointer-events:none;
-      background:
-        url("./assets/lion-watermark.png") center/62vmin no-repeat;
-      opacity:.05; filter:grayscale(1) contrast(1.05);
+      background:url("assets/lion-watermark.png") center/62vmin no-repeat;
+      opacity:.06; filter:grayscale(1) contrast(1.05);
+      border-radius:20px;         /* keep inside the rounded panel */
+      z-index:0;
     }
+    .page > *{ position:relative; z-index:1; } /* content above watermark */
 
     header{display:flex; align-items:center; gap:14px; margin-bottom:14px}
     .logo{
       width:44px; height:44px; border-radius:12px;
-      background:url("./assets/logo.svg") center/contain no-repeat, var(--panel);
+      background:url("assets/logo-xscreener.jpeg") center/contain no-repeat, var(--panel);
       border:1px solid var(--border);
     }
     .brand h1{margin:0; font-size:22px; letter-spacing:.3px}
