--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       opacity:.06; filter:grayscale(1) contrast(1.05);
       border-radius:20px;         /* keep inside the rounded panel */
       z-index:0;
+      mix-blend-mode:multiply;  
     }
     .page > *{ position:relative; z-index:1; } /* content above watermark */
 
@@ -154,3 +155,4 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
