--- a/index.html
+++ b/index.html
@@ -27,18 +27,16 @@
     }
 
     /* ===== VIEWPORT WATERMARK (NEW) ===== */
-    body::before{
-      content:"";
-      position: fixed;
-      inset: 0;
-      /* make it hero-sized and responsive; bump v=4 to break cache when you update the file */
-      background: url("./assets/lion-watermark-dark.png?v=4") center/
-                  clamp(100vmin, 110vmin, 1400px) no-repeat;
-      opacity: .10;          /* tweak .08 – .14 to taste */
-      filter: none;          /* white strokes already read well */
-      pointer-events: none;
-      z-index: 0;
-    }
+   body::before{
+  content:"";
+  position: fixed;
+  inset: 0;
+  background: url("./assets/lion-watermark-dark.png?v=5")
+              center 44% / clamp(135vmin, 150vmin, 2200px) no-repeat;
+  opacity: .12;          /* try .10–.14 */
+  pointer-events: none;
+  z-index: 0;
+}
 
     .page{
       position:relative; 
@@ -178,3 +176,4 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
