--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
       </div>
 
       <div class="cta">
+         <a class="btn primary" href="/charts.html">Launch demo</a>
         <a class="btn primary" href="mailto:partnerships@xscreener.io">Contact Partnerships</a>
         <a class="btn" href="https://github.com/codingmania-crypto" target="_blank" rel="noopener">Developer GitHub</a>
       </div>
@@ -204,3 +205,4 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
